	 block with no data correctly (fixes bugs #1720238 and #1720270).
20070518 tzx_write.c: add write support for TZX direct recording block (Fred).
20070518 Makefile.am,configure.in,doc/Makefile.am,hacking/Makefile.am,
         myglib/{.cvsignore,Makefile.am},test/{.cvsignore,Makefile.am}:
         make sure libspectrum is built before test by switching to a 
         non-recursive make with full dependency graph (Fred).
20070520 test/test.c: fix warnings in test build (Fred).
20070520 Remove .cvsignore files.
20070522 internals.h,libspectrum.h.in,tap.c,tape.c,tzx_read.c,tzx_write.c,
         warajevo_read.c: mark deprecated tape functions as such and add
         wrappers so that libspectrum_tape_read doesn't have to call
         deprecated functions (Fred).
20070522 Mark mkinstalldirs as an ignored file (Fred).
20070522 rzx.c: fix printf warning and comment (Fred).
20070526 tape.c,test/test.c: allow for uninitialised buffer on entry to
	 libspectrum_tape_write() (fixes bugs #1725864) (thanks, Dave Mills).
20070526 <almost everything>: update FSF address in GPL notices (Stuart).
20070530 Makefile.am,acinclude.m4,configure.in,doc/libspectrum.txt,
         internals.h,libspectrum.c,libspectrum.h.in,tape.c,wav.c: add simple
         support for loading directly from wav tape files (part of patch
         #1725974) (Fred).
20070530 Makefile.am,csw.c,internals.h,libspectrum.h.in,tape.c,
         tape_accessors.txt,tape_block.[ch],z80em.c: add support for saving csw
         tape files (rest of patch #1725974) (Fred).
20070530 tape.c: tidy up audiofile missing error message (Fred).
20070530 acinclude.m4: remove warning about underquoted definition (Stuart).
20070531 tape.c: fix loading with tape traps (thanks, Stuart Brady) (Fred).
20070601 tape_accessors.txt: add data accessor for rle_pulse block (Fred).
20070602 rzx.c,wav.c: fix up printf() related warnings.
20070602 Ignore make-perl.exe and test/test.exe (Stuart).